--- a/src/components/formInput/formInput.styles.css
+++ b/src/components/formInput/formInput.styles.css
@@ -5,7 +5,7 @@ input {
   border: 1px solid gray;
 }
 
-.formInput {
+.input-container{
   display: flex;
   flex-direction: column;
   width: 280px;
